tree-sitter-cvg/test/corpus/block_comments.txt
================================================================================
Simple block comment
================================================================================

/* simple block comment */
tempo 120

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (tempo_stmt
    (number)))

================================================================================
Multi-line block comment
================================================================================

/*
  multi-line
  block comment
*/
tempo 120

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (tempo_stmt
    (number)))

================================================================================
Nested block comment
================================================================================

/* outer /* inner */ still outer */
tempo 120

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (tempo_stmt
    (number)))

================================================================================
Deeply nested block comment
================================================================================

/* level1 /* level2 /* level3 */ level2 */ level1 */
tempo 120

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (tempo_stmt
    (number)))

================================================================================
Block comment between statements
================================================================================

tempo 120
/* comment between */
scale c minor

--------------------------------------------------------------------------------

(source_file
  (tempo_stmt
    (number))
  (block_comment)
  (scale_stmt
    (note_name)
    (scale_type)))

================================================================================
Line comment and block comment coexist
================================================================================

// line comment
/* block comment */
tempo 120

--------------------------------------------------------------------------------

(source_file
  (comment)
  (block_comment)
  (tempo_stmt
    (number)))
